video update email

--- a/scripts/email/hwcentral_users_data/body.html
+++ b/scripts/email/hwcentral_users_data/body.html
@@ -1,4 +1,8 @@
-Email body.
-This email is for {{ user.first_name }} {{ user.last_name }}
+Hello {{ user.username }},
 
-from the {{ site.name }} team
+A quick demo video for students is now live at: https://www.youtube.com/watch?v=nAgfTNpSnIs
+
+Please view it to get a better idea of how you can use {{ site.name }}
+
+Regards,
+The {{ site.name }} team
