added session clearing cron job

--- a/scripts/email/hwcentral_users_data/body.html
+++ b/scripts/email/hwcentral_users_data/body.html
@@ -1,8 +1,10 @@
 Hello {{ user.username }},
 
-A quick demo video for students is now live at: https://www.youtube.com/watch?v=nAgfTNpSnIs
+Please watch the demo video for students by clicking the following link:
 
-Please view it to get a better idea of how you can use {{ site.name }}
+https://www.youtube.com/watch?v=nAgfTNpSnIs
+
+We hope it will help you to get a better idea of how you can use {{ site.name }}
 
 Regards,
 The {{ site.name }} team
