--- a/scripts/email/hwcentral_users_data/body.html
+++ b/scripts/email/hwcentral_users_data/body.html
@@ -1,10 +1,10 @@
-Hello {{ user.username }},
+Hello {{ user.first_name }} {{ user.last_name }},
 
-Please watch the demo video for students by clicking the following link:
+The class you are a part of on {{ site.name }} was recently reset and as a result you will no longer be able to
+view your earlier submission made for the Algebraic Expressions assignment. If this assignment is reassigned in the
+future, your marks from the earlier submission will be applied to it unless you choose to re-do the assignment.
 
-https://www.youtube.com/watch?v=nAgfTNpSnIs
-
-We hope it will help you to get a better idea of how you can use {{ site.name }}
+Please feel free to contact us in case of any questions at contact@hwcentral.in or +91 7057216343
 
 Regards,
 The {{ site.name }} team
