new index, login, overview and help videos and contact details cleanup

--- a/scripts/email/hwcentral_users_data/body.html
+++ b/scripts/email/hwcentral_users_data/body.html
@@ -4,7 +4,7 @@ The class you are a part of on {{ site.name }} was recently reset and as a resul
 view your earlier submission made for the Algebraic Expressions assignment. If this assignment is reassigned in the
 future, your marks from the earlier submission will be applied to it unless you choose to re-do the assignment.
 
-Please feel free to contact us in case of any questions at contact@hwcentral.in or +91 7057216343
+Please feel free to contact us in case of any questions.
 
 Regards,
 The {{ site.name }} team
